<resources>
    <string name="app_name">GetInShapeApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_id">597202379032-j4i4ie295m4jknqtdoakb7rs1i20oph8.apps.googleusercontent.com</string>
    <string name="weightlbl">משקל</string>
    <string name="log_out_txt">התנתק</string>
    <string name="add_category_err">שגיאה בהוספת קטגוריה</string>
    <string name="add_category_ok">קטגוריה הוספה בהצלחה</string>
    <string name="manageExercise">ניהול תרגילים</string>
    <string name="personalArea">איזור אישי</string>
    <string name="exercise">תרגילים</string>
    <string name="categoryHeader">קטגוריה:</string>
    <string name="exerciseNameHeader">שם התרגיל</string>
    <string name="exerciseDataHeader">תוכן התרגיל</string>
    <string name="exerciseNoteHeader">הערות</string>
    <string name="exerciseNameHeaderShow">שם התרגיל:</string>
    <string name="exerciseDataHeaderShow">תוכן התרגיל:</string>
    <string name="exerciseNoteHeaderShow">הערות:</string>
    <string name="exerciseImageHeader">בחר תמונה להמחשה</string>
    <string name="exerciseAddBtn">הוסף תרגיל</string>
    <string name="exerciseDetailsHeader">פרטי תרגיל</string>
    <string name="categoryAppBarHeader">כל הקטגוריות</string>
    <string name="exercisesInCatAppBarHeader">תרגילים בקטגוריה: </string>
    <string name="personalAreaAppBarHeader">האיזור האישי</string>
    <string name="craeteExerciseHeader">יצירת תרגיל</string>
    <string name="signInBtn">התחבר</string>
    <string name="welcomeMsg">ברוך הבא לgetInShape! \n כאן תוכל לנהל את תוכנית האימונים שלך ולהעזר במאגר התרגילים שלנו</string>
    <string name="imageNotFound">התמונה לא נמצאה</string>
</resources>
