<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tmrapps.getinshapeapp.CreateExerciseFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textCategoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoryHeader"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/textCategoryHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoryHeader"
            android:textSize="20dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/exerciseNameHeader"
        android:layout_weight="1"/>


    <EditText
        android:id="@+id/editText5"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|right"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/exerciseDataHeader"
        android:scrollbars="vertical"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/exerciseNoteHeader"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/chooseImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exerciseImageHeader"
        android:layout_gravity="right"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/createNewExerciseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/exerciseAddBtn" />

</LinearLayout>
